--- a/src/pages/Main/CityCarousel.scss
+++ b/src/pages/Main/CityCarousel.scss
@@ -1,14 +1,32 @@
+@import '../../style/colors.scss';
+
 .CityCarousel {
 
 }
 
 .CityCard {
   display: inline-block;
-  background-size: cover;
+  position: relative;
+  left: 10px;
   height: 107px;
-  width: 160px !important;
-  margin: 0 20px 0 0;
+  width: 160px ;
+  background-size: cover;
+  margin: 0 20px 10px 0px;
+  border-radius: 4px;
+  box-shadow: 0 3px 8px 0 rgba(0,0,0,.3), 0 0 1px 0 rgba(0,0,0,.3);
+  transition: box-shadow .2s ease;
   &__wrapper {
+    height: 100%;
+    width: 100%;
     background-image: linear-gradient(166deg,#fff 40%,hsla(0,0%,100%,0) 68%);
+    border-radius: 4px;
+  }
+  h3 {
+    position: absolute;
+    top: 14px;
+    left: 14px;
+    font-size: 18px;
+    font-weight: 700;
+    color: $grey900;
   }
 }
