--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -98,3 +98,23 @@
 .slick-arrow.slick-hidden {
   display: none;
 }
+.Carousel-arrow {
+  position: absolute;
+  top: -7px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 1100px;
+  margin: auto;
+  transform: translate(-50%, 0);
+  left: 50%;
+  z-index: 1;
+}
+.arrow-right {
+  position: absolute;
+  right: 0;
+}
+.arrow-left {
+  position: absolute;
+  left: 0;
+}
