--- a/src/pages/Main/MainMap.scss
+++ b/src/pages/Main/MainMap.scss
@@ -1,7 +1,9 @@
 .MainMap {
+  width: 530px;
+  height: 800px;
   &__map {
-    width: 530px;
-    height: 800px;
+    width: 500px;
+    height: 100%;
     border-radius: 4px;
     box-shadow: inset 0 0 0 1px rgba(0,0,0,.05);
   }
