:sparkles:지도검색결과 캐루셀 추가

--- a/src/pages/Main/MainMap.scss
+++ b/src/pages/Main/MainMap.scss
@@ -4,6 +4,7 @@
   &__map {
     width: 500px;
     height: 100%;
+    margin: 0 0 0 10px;
     border-radius: 4px;
     box-shadow: inset 0 0 0 1px rgba(0,0,0,.05);
   }
