--- a/src/pages/Main/MapSearchResult.scss
+++ b/src/pages/Main/MapSearchResult.scss
@@ -2,7 +2,6 @@
 
 .MapSearchResult {
   width: 530px;
-  // background: tomato;
   h2 {
     color: $grey700;
     font-size: 24px;
@@ -12,7 +11,6 @@
 }
 
 .TripInfoCard {
-  // background: blue;
   box-sizing: border-box;
   width: 250px;
   height: 332px;
@@ -22,10 +20,10 @@
   img {
     width: 100%;
     height: 187px;
-    // height: 200px;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
   }
   &__info {
-    // background: red;
     padding: 8px 16px;
     &__tags {
       margin: 4px 0 2px;
