:lipstick:arrow button  관련 css 수정

--- a/src/components/TripInfoCard.scss
+++ b/src/components/TripInfoCard.scss
@@ -1,6 +1,8 @@
 @import '../style/colors.scss';
 
 .TripInfoCard {
+  position: relative;
+  left: 7.5px;
   box-sizing: border-box;
   width: 250px;
   height: 332px;
