--- a/src/pages/Main/TourList.scss
+++ b/src/pages/Main/TourList.scss
@@ -1,7 +1,7 @@
 @import "../../style/colors.scss";
-.RecentTourList {
+.TourList {
   width: 1060px;
-  margin: 80px auto 0;
+  margin: 20px auto 0;
   h2 {
     color: $grey700;
     font-size: 24px;
