--- a/src/components/TripInfoCard.scss
+++ b/src/components/TripInfoCard.scss
@@ -9,6 +9,7 @@
   margin: 0 0 40px 0;
   border: 1px solid $grey200;
   border-radius: 4px;
+  cursor: pointer;
   img {
     width: 100%;
     height: 187px;
